Issue #2975618 by Muath Khraisat: Add support for [Vartheme Material] pages with one or two cards and fix spacing for card-deck on mobiles

--- a/VARTHEME_MATERIAL_SUBTHEME/less/component/card.component.less
+++ b/VARTHEME_MATERIAL_SUBTHEME/less/component/card.component.less
@@ -145,16 +145,14 @@
 .card-deck {
   display: flex;
   flex-direction: column;
+  margin-right: -@card-deck-margin;
+  margin-left: -@card-deck-margin;
 
   .card {
     margin-bottom: @card-deck-margin;
   }
 
   @media (min-width: @screen-sm) {
-    flex-flow: row wrap;
-    margin-right: -@card-deck-margin;
-    margin-left: -@card-deck-margin;
-
     .card {
       display: flex;
       // Flexbugs #4: https://github.com/philipwalton/flexbugs#4-flex-shorthand-declarations-with-unitless-flex-basis-values-are-ignored
